mobile overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -261,7 +261,7 @@ footer {
     border-radius: 0px 10px 10px 0px;
     text-align: justify;
     height: 245px;
-    overflow: scroll;
+    overflow-y: scroll;
     width: auto;
     min-width: 230px;
     font-size: 14px;
